2000-05-01  Stan Shebs  <shebs@apple.com>

	Remove obsolete Gould configuration:
	* configure.host, configure.tgt: Remove Gould configs.
	* Makefile.in: Remove Gould-related actions.
	* gould-xdep.c, gould-tdep.c, config/gould/*: Remove files.
	* NEWS: Mention removal.
	
Mon May  1 15:37:58 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-04-28 Andreas Jaeger <aj@suse.de>:
	* defs.h: Properly check for GCC version number.

Fri Apr 28 15:31:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From "Serge Nikulin" <nikulin@actsw.amat.com>:
	* m68k-tdep.c (delta68_in_sigtramp): Return 0 when the function
 	name is unknow.

Fri Apr 28 12:21:28 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>:
	* target.c (do_monitor_command): Cast tcomplain to correct
 	function type in comparison.

Thu Apr 27 10:06:42 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Document IRIX X ARM cross compile problems.

Wed Apr 26 17:50:39 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Document BFD automake problem.

2000-04-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* TODO, NEWS: Update due to inclusion of gdbmi.texinfo in the GDB
	manual.

2000-04-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/README: Explain how to unpack using djunpack.bat.

2000-04-21  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* gdb-stabs.h (SECT_OFF_MAX): Increase to 40.

2000-04-20  Christopher Faylor  <cgf@cygnus.com>

	* win32-nat.c (thread_rec): Be more defensive about suspending already
	suspended threads.
	(safe_symbol_file_add_stub): New function.
	(safe_symbole_file_add_cleanup): New function.
	(safe_symbol_file_add): New function.
	(handle_load_dll): Use wrapper to add DLL symbol information to avoid
	bogus errors from non-stabs DLLs.
	(handle_exception): Add work around for detection of first exception
	breakpoint which does not seem to occur on W2K.  Detect more "signals"