@@ -1,3 +1,8 @@
+2000-05-04  Mark Kettenis  <kettenis@gnu.org>
+
+	* i386-linux-nat.c: Define PT_READ_U and PT_WRITE_U if they're not
+	already defined.
+
 2000-05-01  Stan Shebs  <shebs@apple.com>
 
 	Remove obsolete Gould configuration:
